corpus/baselines/conformance/salsa/moduleExportAliasUnknown.errors.txt
bug27025.js(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
bug27025.js(1,25): error TS2339: Property 'nonprop' does not exist on type 'Window & typeof globalThis'.
bug27025.js(2,15): error TS2304: Cannot find name 'bar'.


==== bug27025.js (3 errors) ====
    module.exports = window.nonprop;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
                            ~~~~~~~
!!! error TS2339: Property 'nonprop' does not exist on type 'Window & typeof globalThis'.
    exports.foo = bar;
                  ~~~
!!! error TS2304: Cannot find name 'bar'.
    